Creando formulario para ingreso de datos usando ajax

--- a/sgim/templates/includes/nav_bar.html
+++ b/sgim/templates/includes/nav_bar.html
@@ -29,7 +29,7 @@
                         <li><a href="{% url 'rutinas_list' %}">Rutinas</a></li>
                         <li><a href="{% url 'planes_list' %}">Programacion</a></li>
                         <li class="divider"></li>
-                        <li><a href="{% url 'logout' %}">Boletas</a></li>
+                        <li><a href="{% url 'boletas_list' %}">Boletas</a></li>
                     </ul>
                 </li> 
                 <li class="dropdown" >
@@ -37,7 +37,7 @@
                         Incidencias<b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="{% url 'tarea_add' %}">Tareas</a></li>
+                        <li><a href="{% url 'incidentes_list' %}">Incidentes</a></li>
                         <li><a href="{% url 'actualizar_clave' %}">Rutinas</a></li>
                         <li class="divider"></li>
                         <li><a href="/admin">Programacion</a></li>
