Creando formulario para ingreso de datos usando ajax

--- a/sgim/templates/includes/nav_bar.html
+++ b/sgim/templates/includes/nav_bar.html
@@ -38,10 +38,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="{% url 'incidentes_list' %}">Incidentes</a></li>
-                        <li><a href="{% url 'actualizar_clave' %}">Rutinas</a></li>
-                        <li class="divider"></li>
-                        <li><a href="/admin">Programacion</a></li>
-                        <li><a href="{% url 'logout' %}">Boletas</a></li>
+                        <li><a href="{% url 'cambios_list' %}">Cambios</a></li>
                     </ul>
                 </li> 
             </ul>
